opp_msgc: now accepts multiple files, and also does dependency check (does not overwrite _m.cc/h file if it's already up to date)
unsupported features of old NED (cannot be converted!):
	- ancestor, ref parameters

2006-10-21  ------ omnetpp-3.3 released ------

2006-10-04  Andras Varga

	* ned.y: msg file syntax handling made more liberal: accept expressions
	as field initializers

2006-01-12  ------ omnetpp-3.2p1 released ------

2005-10-19  ------ omnetpp-3.2 released ------

2005-09-22  Andras Varga

	* nedbasicvalidator.cc: enabled parent module gates to get connected
	with "++". Parentmodgate++ connects the first unconnected gate, but 
	it doesn't create new ones -- it is an error to exceed sizeof(gate).

2005-08-08  Andras Varga

	* cppgenerator.cc: assign submodule parameters, gatesizes etc 
	in that submodule's context (use cContextSwitcher); same for network.
	This is mainly needed for ModNameParamResolver to work correctly
	($MODULE_NAME etc for XPath expressions are taken from the module 
	in context).

2005-08-07  Andras Varga

	* cppgenerator.cc: don't look for module type if module vector size 
	is zero.

2005-07-06 Andras Varga

	* ned.dtd, ned.y, etc: added support for message declarations in msg 
	files (message-decl element, MessageDeclNode class)
	
2005-03-31  ------ omnetpp-3.1 released ------

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-06  Andras Varga

	* ned.y: negative int or real constants were parsed as -1*x, which 
	caused problems for input() with negative default values

	* cppexprgenerator.cc/h: generate inline expression (not expression 
	class) for const parameters

	* cppexprgenerator.cc/h: fixed handling of index, sizeof(), input()

2004-11-29  Andras Varga

	* ned.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
	[patch from Michael Tuexen]

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-02  Andras Varga
	