@@ -27,7 +27,7 @@ NAMESPACE_BEGIN
 
 /**
  * GENERATED CLASS. Validates a NEDElement tree by the DTD.
- * 
+ *
  * @ingroup Validation
  */
 class NEDXML_API NEDDTDValidator : public NEDDTDValidatorBase
@@ -74,6 +74,7 @@ class NEDXML_API NEDDTDValidator : public NEDDTDValidatorBase
     virtual void validateElement(IdentNode *node);
     virtual void validateElement(LiteralNode *node);
     virtual void validateElement(MsgFileNode *node);
+    virtual void validateElement(NamespaceNode *node);
     virtual void validateElement(CplusplusNode *node);
     virtual void validateElement(StructDeclNode *node);
     virtual void validateElement(ClassDeclNode *node);
