@@ -104,6 +104,7 @@ class NEDXML_API NEDSemanticValidator : public NEDValidatorBase
     virtual void validateElement(IdentNode *node);
     virtual void validateElement(LiteralNode *node);
     virtual void validateElement(MsgFileNode *node);
+    virtual void validateElement(NamespaceNode *node);
     virtual void validateElement(CplusplusNode *node);
     virtual void validateElement(StructDeclNode *node);
     virtual void validateElement(ClassDeclNode *node);
